@startuml

class RideEntity {
  +Long id
  +String trafficTime
  +String weekDay
  +Integer year
  +String coordinates
  +String path
  +Date rideStart
  +Date rideEnd
  +Geometry way
}

class RideIncident {
  +Long id
  +String trafficTime
  +String weekDay
  +Integer year
  +String bike
  +Boolean childCheckBox
  +String description
  +String incidentType
  +double lat
  +double lng
  +String phoneLocation
  +Boolean scary
  +Date timeStamp
  +Boolean trailerCheckBox
  +Geometry way
  +Long planetOsmLineOsmId
}

class RideIncidentParticipant {
  +Long rideIncidentId
  +String participantInvolved
}

enum WeekDays {
    WEEK
    WEEKEND
    ALL_WEEK
}

enum TrafficTimes {
  ALL_DAY,
  MORNING_RUSH_HOUR,
  MID_DAY,
  EVENING_RUSH_HOUR,
  EVENING_NIGHT_MORNING,
}

enum IncidentType {
  DUMMY_INCIDENT
  NOTHING
  CLOSE_PASS
  PULLING_IN_OUT
  NEAR_LEFT_RIGHT_HOOK
  HEAD_ON_APPROACH
  TAILGATING
  NEAR_DOORING
  DODGING_OBSTACLE
  OTHER
}

enum BikeType {
  NOT_CHOSEN
  CITY_TREKKING_BIKE
  ROAD_RACING_BIKE
  E_BIKE
  RECUMBENT_BICYCLE
  FREIGHT_BICYCLE
  TANDEM_BICYCLE
  MOUNTAIN_BIKE
  OTHER
}

enum ParticipantType {
  BUS_COACH
  CYCLIST
  PEDESTRIAN
  DELIVERY_VAN
  LORRY_TRUCK
  MOTORCYCLIST
  CAR
  TAXI_CAB
  OTHER
  ELECTRIC_SCOOTER
}

enum PhoneLocation {
  POCKET
  HANDLEBAR
  JACKET_POCKET
  HAND
  BASKET_PANNIER
  BACKPACK_BAG
  OTHER
}

RideEntity "1" <-- "0..*" RideIncident

RideIncident -- WeekDays
RideIncident -- TrafficTimes
RideIncident -- IncidentType
RideIncident -- BikeType
RideIncident -- PhoneLocation
RideIncident "1" <-left- "0..*" RideIncidentParticipant
RideIncidentParticipant -- ParticipantType

RideEntity -- WeekDays
RideEntity -- TrafficTimes

@enduml
